<resources>
    <string name="app_name">Sholly</string>
    <string name="virtualSteve">Your Virtual Assistant  in\nSholly. There are a few simple\n steps to get started\n with the app. \nLet\'s do it!</string>
    <string name="hellosteve">Hello, I\'m Steve!</string>
    <string name="regOrEnter">Are you already at Sholly? If yes, then log \ninto your account, if not, then \nregister!</string>
    <string name="regSteps">Follow a few simple\nregistration steps or\nuse your Google account</string>
    <string name="belarus">from Belarus, with love)</string>
    <string name="enterFast">Hurry, sign in to the\napplication, and I need\nto remember for a little while\nwhere we could see each other</string>
    <string name="startregtext">Let\'s start registration!</string>
    <string name="go1">Step 1</string>
    <string name="whriteyournick">Come up with a nickname</string>
    <string name="go2">Step 2</string>
    <string name="writephone">Enter your phone number</string>
    <string name="go3">Step 3</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="writepassword">Create a password</string>
    <string name="writepasswordenter">Enter password</string>
    <string name="meetearly">Are we already familiar?</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="next">Continue</string>
    <string name="ent">login</string>
    <string name="from">via</string>
    <string name="googleplay">Google</string>
    <string name="reg">registration</string>
    <string name="redact">Edit</string>
    <string name="main">Home</string>
    <string name="createnickname">Come up with a nickname</string>
    <string name="searchfriends">Find friends!</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="mes">Message</string>
    <string name="codeissended">Code sent to phone number</string>
    <string name="writecode">Enter code</string>
    <string name="sendnewcode">Resend</string>
    <string name="warning">Important!</string>
    <string name="choosegender">Specify your gender:</string>
    <string name="man">MALE</string>
    <string name="woman">FEMALE</string>
    <string name="subscribers">Subscribers</string>
    <string name="friends">Friends</string>
    <string name="looks">Looks</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="newlook">New look +</string>
    <string name="settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="exclusive1">Exclusive</string>
    <string name="clothes">Clothes</string>
    <string name="shoes">Shoes</string>
    <string name="pants">Pants</string>
    <string name="shorts">Shorts</string>
    <string name="belt">Belt</string>
    <string name="tshirt">T-shirt</string>
    <string name="shirt">Shirt</string>
    <string name="longsleeve">Longsleeve</string>
    <string name="glasses">Glasses</string>
    <string name="cap">Cap</string>
    <string name="panama">Panama</string>
    <string name="skirt">Skirt</string>
    <string name="top">Top</string>
    <string name="bag">Shoulder bag</string>
    <string name="hats">Hats</string>
    <string name="accessories">Accessories</string>
    <string name="inbasket">Add to cart</string>
    <string name="toolbar_news">News</string>
    <string name="toolbar_people">People</string>
    <string name="toolbar_profile">Profile</string>
    <string name="recomindation">Recommendations</string>
    <string name="marks">Recent grades</string>
    <string name="plus">+</string>
    <string name="registration">REGISTRATION</string>
    <string name="enter">SIGN IN</string>
    <string name="zitats">Quotes</string>
    <string name="search">Search</string>
    <string name="susriders">Subscribers</string>
    <string name="editing">Edit</string>
    <string name="changeface">Change face</string>
    <string name="usernameediting">Nickname (change unavailable)</string>
    <string name="bio">Bio</string>
    <string name="agree">Confirm</string>
    <string name="nontifications">Notifications</string>
    <string name="lichnyechats">Private messages</string>
    <string name="group">Group chats</string>
    <string name="profilereact">Profile actions (likes, comments, etc.)</string>
    <string name="likeandsubs">(Лайки, подписки и т.д.)</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="closeaccount">Closed account</string>
    <string name="support">Support</string>
    <string name="error">Report a problem</string>
    <string name="soobchi">Please, write to us,
         if you notice any bug</string>
    <string name="personaldatastring">Личные данные</string>
    <string name="nickstring">Nickname</string>
    <string name="aboutapp">О приложении</string>
    <string name="emailstring">E-mail</string>
    <string name="passwordstrind">Пароль</string>
    <string name="message">Messages</string>
    <string name="id">id</string>
    <string name="privatemessages">Private</string>
    <string name="groupmessages">Group</string>
    <string name="start_typing_status">Typing</string>
    <string name="stop_typing_status">...</string>
    <string name="messages">Message...</string>
    <string name="shop">Shop</string>
    <string name="tests">Тесты</string>
    <string name="popular">Popular</string>
    <string name="searchtests">Поиск тестов</string>
    <string name="mytests">МОИ ТЕСТЫ</string>
    <string name="schoolytests">Тесты Sholly</string>
    <string name="chanel_name">tyomaa</string>
    <string name="num">318</string>
    <string name="newnew">New</string>
    <string name="searchitem">Search for clothes</string>
    <string name="searchiteminbasket">Search for clothes in the shopping cart</string>
    <string name="mining">Mining</string>
    <string name="myminersallcars">MY MINERS</string>
    <string name="myminers">My miners</string>
    <string name="today">Today:</string>
    <string name="moremoney">Mine more</string>
    <string name="workingminers">Active miners</string>
    <string name="miners">Miners</string>
    <string name="weak">Weak</string>
    <string name="buy">Buy</string>
    <string name="inhour">/hour</string>
    <string name="noactiveminers">No active miners</string>
    <string name="use">Use</string>
    <string name="upgrade">Improve</string>
    <string name="average">Average</string>
    <string name="strong">Powerful</string>
    <string name="getminer">Buy a miner?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="price">Price:</string>
    <string name="measure">Try on</string>
    <string name="addFr">Add </string>
    <string name="rejectFriend">Refuse</string>
    <string name="subscribeyou"> subscribed to you</string>
    <string name="account">ACCOUNT</string>
    <string name="nontsBig">NOTIFICATIONS</string>
    <string name="rules">Terms of use</string>
    <string name="change">Change</string>
    <string name="fromBrest">For you with love</string>
    <string name="deleteFriend">Delete</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscride">Subscribe</string>
    <string name="unsubscride">Unsubscribe</string>
    <string name="changepassword">Password change</string>
    <string name="textEnterUsePassword">Please enter a valid password</string>
    <string name="errortext">Invalid password</string>
    <string name="сreate">Create</string>
    <string name="сreateNewPassword">Think of a new password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="passwordNotEquals">Passwords do not match</string>
    <string name="myClothes">My clothes</string>
    <string name="firstSubscribe">Subscribe to</string>
    <string name="closeAccount">This user has a closed account(</string>
    <string name="createFirstClothes">Design clothes</string>
    <string name="getSchoolyCoin">and get Sholly-coin!</string>
    <string name="create">Create</string>
    <string name="noClothes">No clothes in wardrobe(</string>
    <string name="noLooksOther">The user has no images(</string>
    <string name="block">Block</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="complain">Complain</string>
    <string name="deleteSubscriber">Delete subscriber</string>
    <string name="blackList">Black list</string>
    <string name="putAway">Put away</string>
    <string name="putAwayDone">Removed</string>
    <string name="emptyBlackList">Blacklist is empty</string>
    <string name="noSaved">No saved looks</string>
    <string name="emptySubscribersList">No followers :(</string>
    <string name="writeComment">Write a comment...</string>
    <string name="sendComment">SEND</string>
    <string name="emptyCommentsList">No followers</string>
    <string name="emptySubscriptionList">No subscriptions :(</string>
    <string name="emptySearchSubscriptionList">In order to transfer coins to another user, you must be subscribed to him</string>
    <string name="emptySubscriptionListOther">No subscriptions:(</string>
    <string name="emptySubscribersListOther">No followers:(</string>
    <string name="toComplain">Complain</string>
    <string name="complainReason">The reason for the complaint against</string>
    <string name="noClothesWardrobe">No clothes in wardrobe:(</string>
    <string name="exitAccount">Sign out</string>
    <string name="textReason">Reason for complaint:</string>
    <string name="addDescription">Add description</string>
    <string name="addDescription2">Add description:</string>
    <string name="notFound">Nothing found:(</string>
    <string name="newLook">New look</string>
    <string name="character">Character</string>
    <string name="ready">READY</string>
    <string name="acceptCharacter">Save character</string>
    <string name="tryOnClothes">Try on</string>
    <string name="descriptipon">Description:</string>
    <string name="noDescriptipon">No description :(</string>
    <string name="oneTh">1000</string>
    <string name="twoTh">2000</string>
    <string name="fiveTh">5000</string>
    <string name="sevenTh">7500</string>
    <string name="tenTh">10000</string>
    <string name="twentyTh">20000</string>
    <string name="oneD">$1.99</string>
    <string name="twoD">$2.99</string>
    <string name="fiveD">$8.99</string>
    <string name="sevenD">$11.99</string>
    <string name="tenD">$14.99</string>
    <string name="twentyD">$19.99</string>
    <string name="payment">Payment</string>
    <string name="customer">Buyer:</string>
    <string name="purchase">Purchase:</string>
    <string name="cardData">Bank card details:</string>
    <string name="messageLimit">Sending messages is limited</string>
    <string name="schoolyPremium">Sholly Premium</string>
    <string name="buyPremium">Buy a subscription</string>
    <string name="publish">Publish</string>
    <string name="purchases">Sales</string>
    <string name="today1">today:</string>
    <string name="purchasestoday">Sales today:</string>
    <string name="profittoday">Profit for today:</string>
    <string name="allpurchases">General sales:</string>
    <string name="allprofit">Total profit:</string>
    <string name="profit">Profit(24h):</string>
    <string name="total">Total:</string>
    <string name="lookPrice">Image cost:</string>
    <string name="addDesk">Add description...</string>
    <string name="sellClothesByDollars">Sell clothes for real money</string>
    <string name="moreCoinsMining">Increase earnings from mining</string>
    <string name="creatingTalk">Creating a talk</string>
    <string name="addedInChat">Added:</string>
    <string name="suggested">Suggested:</string>
    <string name="addMembers">Add members</string>
    <string name="talkTitle">Talk title</string>
</resources>