<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <ImageView
            android:id="@+id/back_tosettingspersonaldata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:layout_toRightOf="@+id/back_tosettingspersonaldata"
            android:text="@string/settings"
            android:textColor="@color/app_color2"
            android:textSize="22sp"
            android:fontFamily="@font/montserrat_bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personaldatastring"
            android:textSize="18sp"
            android:textColor="@color/app_grey"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickstring"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/app_grey"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailstring"
            android:textSize="14sp"
            android:layout_marginTop="38dp"
            android:textColor="@color/app_grey"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordstrind"
            android:textSize="14sp"
            android:layout_marginTop="38dp"
            android:textColor="@color/app_grey"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="14sp"
            android:layout_marginTop="38dp"
            android:textColor="@color/app_grey"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_semibold"/>

    </LinearLayout>


</LinearLayout>