<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="140dp"
    android:layout_centerInParent="true"
    android:elevation="6dp"
    android:background="@drawable/corners14dpwhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getminer"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/app_grey"/>

    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textSize="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/app_color"/>

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="18dp"
        android:layout_toLeftOf="@+id/yes"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/app_grey"/>

</RelativeLayout>