<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <ImageView
                android:id="@+id/backtomainfromsettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                android:layout_toRightOf="@+id/backtomainfromsettings"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/settings"
                android:textColor="@color/app_color"
                android:textSize="22sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/rel"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/userNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:textSize="22sp"
            android:textColor="@color/app_color"
            android:fontFamily="@font/montserrat_extrabold"
            android:layout_toRightOf="@id/userImage"/>

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userImage"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/account"
            android:textColor="@color/app_grey"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/numder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/phone"
            android:textColor="@color/app_grey"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/userNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numder"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/app_color"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNumber"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textColor="@color/app_grey"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/app_color"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/closeAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPassword"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/closeaccount"
            android:textColor="@color/app_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nontification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closeAccount"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nontifications"
            android:textColor="@color/app_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/singleChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nontification"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/lichnyechats"
            android:textColor="@color/app_grey"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/groupChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/singleChat"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/group"
            android:textColor="@color/app_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/groupChat"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/profilereact"
            android:textColor="@color/app_grey"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>

    </RelativeLayout>


</ScrollView>