<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <ImageView
            android:id="@+id/back_toprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:layout_toRightOf="@+id/back_toprofile"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/tests"
            android:textColor="@color/app_color2"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="18dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/montserratblack"
            android:text="@string/mytests"
            android:textColor="@color/app_grey"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/searchclothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/corners12_2dpstrokeappcolor"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="13dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"
                android:layout_weight="10"
                android:background="@null"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/searchtests"
                android:textColorHint="@color/greysearch"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchclothes"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="24dp"
            android:text="@string/popular"
            android:textSize="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/greysearch"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popular"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="24dp"
            android:text="@string/schoolytests"
            android:textSize="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/greysearch"/>
    </RelativeLayout>
</ScrollView>
